# azure-apim-fabric-graphql

./: README.md  azure.yaml
.devcontainer/: init.sh
apim/: all-apis.xml
fabric-graphql/: fabric-graphql-policy.xml  fabric_graphql_apim.py  sensors  test_api.sh
fabric-rest-2-graphql/: fabric-rest-to-graphql-policy-base-sensors-details.xml  fabric-rest-to-graphql-policy-base-sensors.xml  fabric-rest-to-graphql-policy-base.xml  swagger.json  test_api.sh
hooks/: gen_mcp_json.sh
infra/: main.bicep  main.parameters.json
infra/modules/: container-app.bicep  container-apps-environment.bicep  policy.bicep
orders-rest-api/: .gitignore  Dockerfile  README.md  fake_data.py  main.py  models.py  orders-api-policy.xml  orders-api-swagger.json  pyproject.toml  sample_orders.json  test_api.sh  test_auth.py
